added CRUD functionality for rules
